@startuml
'https://plantuml.com/class-diagram

class HoaDonHeader {
    - String maHD, tenKH
    - Date ngayBan
    + HoaDonHeader()
}

class CTHD {
    - String sanPham
    - int soLuong, donGia
    - float chietKhau
    + CTHD()
}

class HoaDon {
    # HoaDon(Builder b)
}

class Builder {
    - HoaDonHeader hdHeader
    - ArrayList<CTHD> cthd
    + Builder buildHDHeader(String maHD, String ngayBan, String tenKH)
    + Builder addCTHD(String tenSP, int soLuong, int donGia, int chietKhau)
    + HoaDon build()
}

Builder ..> HoaDon
HoaDon --> HoaDonHeader: hdHeader
HoaDon *--> "*" CTHD: cthds

Builder --> HoaDonHeader: header
Builder *--> "*" CTHD: cthds

@enduml